syntax = "proto3";
package matrix.lockup.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "lockup/v1/lock.proto";

option go_package = "github.com/MatrixDao/matrix/x/lockup/types";

// Msg defines the Msg service.
service Msg {
  // LockTokens lock tokens
  rpc LockTokens(MsgLockTokens) returns (MsgLockTokensResponse);
}

message MsgLockTokens {
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  google.protobuf.Duration duration = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];
  repeated cosmos.base.v1beta1.Coin coins = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}
message MsgLockTokensResponse {
  uint64 lockId = 1;
}